style: fixe movie carousel There's a whitespace at the bottom of the carousel image when then the image height != the viewport height

--- a/src/features/Sights/MovieCarousel/MovieCarousel.module.scss
+++ b/src/features/Sights/MovieCarousel/MovieCarousel.module.scss
@@ -10,6 +10,7 @@
     @media (max-width: 1601px) {
         height: 100vh;
         width: 100%;
+        background-color: #4d4a4acc;
     }
 
     @media (max-width: 1115px) {
@@ -42,7 +43,7 @@
     }
 
     @media (max-width: 361px) {
-        height: 50vh
+        height: 50vh;
     }
 }
 
